deployment/recognix_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recognix-BRANCHNAME

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recognix-BRANCHNAME-fun
  namespace: recognix-BRANCHNAME
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  rules:
    - host: www.BRANCHNAME.recognix.klucsik.fun
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: recognix-svc-be
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: recognix-svc-fe
                port:
                  number: 80


---
#be
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognix-be
  namespace: recognix-BRANCHNAME
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      service: recognix
  template:
    metadata:
      labels:
        type: backend
        service: recognix
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: backend
          image: BE_IMAGETAG
          imagePullPolicy: Always
          startupProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/actuator/health/liveness
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /api/actuator/health/readiness
              port: 8080
            periodSeconds: 5
            failureThreshold: 10
---

apiVersion: v1
kind: Service
metadata:
  name: recognix-svc-be
  namespace: recognix-BRANCHNAME
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    type: backend
    service: recognix

---
#fe
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognix-fe
  namespace: recognix-BRANCHNAME
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend
      service: recognix
  template:
    metadata:
      labels:
        type: frontend
        service: recognix
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: frontend
          image: FE_IMAGETAG
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: recognix-svc-fe
  namespace: recognix-BRANCHNAME
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    type: frontend
    service: recognix
